--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  /* Fonts  */
+  --main-font: "Helvetica Neue", Arial, Helvetica;
+  --secondary-font: "Roboto";
+  /* Colors */
+  --primary-color: #9500ff;
+  --background-color: #1e0033;
+  --secondary-color: rgb(241, 239, 239);
+  /* Sizes */
+  --sm: 1.2rem;
+  --md: 1.6rem;
+  --lg: 2rem;
+  --xl: 2.4rem;
+  --xxl: 2.8rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+}
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+}
+body {
+  font-family: var(--main-font);
+  background-color: var(--background-color);
+}
+
+.container {
+  width: 95%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
