--- a/src/containers/Header/index.css
+++ b/src/containers/Header/index.css
@@ -1,7 +1,6 @@
 header {
   background-color: var(--background-color);
   border-bottom: 3px solid var(--primary-color);
-  padding: 1rem;
   height: 7rem;
   display: flex;
   align-items: center;
@@ -28,5 +27,10 @@ ul li a {
 
 ul li a:hover {
   color: var(--primary-color);
-  transform: scale(0.7);
+}
+
+@media (max-width: 768px) {
+  ul {
+    display: none;
+  }
 }
