--- a/src/containers/Hero/index.css
+++ b/src/containers/Hero/index.css
@@ -1,18 +1,29 @@
 .hero {
   display: flex;
-  margin-top: 4rem;
+  background-image: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.5) 100%,
+      rgba(0, 0, 0, 0.5) 100%,
+      transparent 67%,
+      transparent 100%
+    ),
+    url(/src/assets/heading.jpg);
+  height: 90vh;
+  background-size: cover;
+  background-position-x: center;
 }
 .hero__container {
-  width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   color: var(--secondary-color);
   flex-direction: column;
   gap: 1rem;
+  margin: 0 auto;
+  text-align: center;
 }
 .hero__container-title {
-  font-size: 5rem;
+  font-size: 6rem;
 }
 .hero__container-subtitle {
   font-size: var(--xxl);
@@ -21,8 +32,25 @@
 .hero__container p {
   font-size: var(--lg);
 }
-.hero__image {
-  width: 50%;
-  height: 60vh;
-  object-fit: cover;
+
+@media (max-width: 768px) {
+  .hero__container {
+    width: 100%;
+  }
+}
+@media (max-width: 375px) {
+  .hero__container-title {
+    font-size: 4rem;
+  }
+}
+@media (min-width: 1024px) {
+  .hero__container-title {
+    font-size: 9rem;
+  }
+  .hero__container-subtitle {
+    font-size: 5rem;
+  }
+  .hero__container p {
+    font-size: 3rem;
+  }
 }
