fixing title component

--- a/src/containers/About/index.css
+++ b/src/containers/About/index.css
@@ -1,8 +1,11 @@
 .about {
   height: auto;
   text-align: center;
-  padding: 8rem 0 5rem 0;
+  padding: 5rem 0 5rem 0;
   background: linear-gradient(to right, rgb(16, 13, 63), rgb(28, 6, 35));
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
 }
 
 .about__photo {
