--- a/src/components/Title/index.css
+++ b/src/components/Title/index.css
@@ -2,5 +2,5 @@
   color: var(--primary-color);
   font-size: 4rem;
   text-transform: uppercase;
-  margin-bottom: 5rem;
+  /* margin-bottom: 5rem; */
 }
