--- a/src/containers/Skills/index.css
+++ b/src/containers/Skills/index.css
@@ -14,14 +14,14 @@
 }
 .skills__container {
   height: auto;
-  background: linear-gradient(45deg, #00000057, transparent);
+  /* background: linear-gradient(45deg, #00000057, transparent); */
   box-shadow: 0 10px 10px rgb(126 15 255 / 20%), 0 0 22px rgb(149 0 243);
-  /* background: var(--background-color); */
-  background: linear-gradient(
+  background: var(--background-color);
+  /* background: linear-gradient(
     to right,
     var(--background-color),
     var(--primary-color)
-  );
+  ); */
 }
 .skills__categories {
   display: flex;
@@ -52,9 +52,10 @@
   fill: var(--soft-purple);
   width: 5rem;
 }
-.skill__icons-color:nth-child(1) {
-  fill: url(#gradient);
-  filter: drop-shadow(0.35px 3.35px 3px #0aa2e7);
+.skill__icons-color-active {
+  width: 5rem;
+  fill: var(--primary-color);
+  filter: drop-shadow(0.35px 3.35px 3px var(--primary-color));
 }
 .skill__icons-color--active {
   color: var(--primary-color);
