--- a/src/containers/Skills/index.css
+++ b/src/containers/Skills/index.css
@@ -60,3 +60,50 @@
 .skill__icons-color--active {
   color: var(--primary-color);
 }
+.skills__description-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  padding: 3rem;
+}
+.description-right {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+}
+.description-right div {
+  padding: 2rem;
+  background: var(--secondary-color);
+  border-radius: 50%;
+}
+.description-right svg {
+  width: 10rem;
+}
+.description-right p {
+  color: var(--secondary-color);
+  font-size: var(--lg);
+  line-height: 1.5;
+  width: 25rem;
+}
+.description-left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+.description-left .projects,
+.description-left .experience {
+  padding: 2rem;
+  width: 28rem;
+  border: 2px solid var(--secondary-color);
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.projects p,
+.experience p {
+  color: var(--secondary-color);
+  font-size: var(--lg);
+}
