--- a/src/containers/Skills/index.css
+++ b/src/containers/Skills/index.css
@@ -1,5 +1,5 @@
 .skills {
-  height: 100vh;
+  height: auto;
   background: linear-gradient(
     to right,
     rgb(130 20 164),
@@ -64,38 +64,50 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  padding: 3rem;
+  margin-top: 4rem;
 }
-.description-right {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  align-items: center;
-}
-.description-right div {
-  padding: 2rem;
-  background: var(--secondary-color);
-  border-radius: 50%;
-}
-.description-right svg {
-  width: 10rem;
-}
-.description-right p {
-  color: var(--secondary-color);
-  font-size: var(--lg);
-  line-height: 1.5;
-  width: 25rem;
+@media (max-width: 768px) {
+  .skills__description-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 2rem;
+  }
 }
 .description-left {
   display: flex;
   flex-direction: column;
+  gap: 2rem;
+  align-items: center;
+}
+.description-left div {
+  padding: 2rem;
+  background: var(--secondary-color);
+  border-radius: 50%;
+}
+.description-left svg {
+  width: 13rem;
+}
+.description span {
+  font-size: bold;
+}
+.description-left p {
+  color: var(--secondary-color);
+  font-size: var(--lg);
+  line-height: 1.5;
+  width: 90%;
+  max-width: 30rem;
+}
+.description-right {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 2rem;
 }
-.description-left .projects,
-.description-left .experience {
+.description-right .projects,
+.description-right .experience {
+  max-width: 35rem;
   padding: 2rem;
-  width: 28rem;
+  width: 90%;
   border: 2px solid var(--secondary-color);
   border-radius: 0.5rem;
   display: flex;
@@ -106,4 +118,48 @@
 .experience p {
   color: var(--secondary-color);
   font-size: var(--lg);
+}
+
+.progress-bar {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  margin-top: 5rem;
+  width: 90%;
+  align-items: center;
+}
+.bar {
+  background-color: var(--soft-purple);
+  width: 100%;
+  height: 1.5rem;
+  border-radius: 1rem;
+  position: relative;
+  max-width: 40rem;
+  margin: 0 auto;
+}
+.bar div {
+  background-color: var(--secondary-color);
+  border-radius: 50%;
+  height: 4rem;
+  width: 4rem;
+  position: absolute;
+  top: -12px;
+}
+.beginner {
+  left: 0;
+}
+.intermediate {
+  left: calc(-2rem + 50%);
+}
+.advanced {
+  right: 0;
+}
+.levels {
+  display: flex;
+  justify-content: space-between;
+  max-width: 40rem;
+  width: 100%;
+}
+.levels span {
+  font-size: var(--md);
 }
