--- a/src/containers/Skills/index.css
+++ b/src/containers/Skills/index.css
@@ -10,18 +10,14 @@
   flex-direction: column;
   align-items: center;
   padding-top: 5rem;
+  padding-bottom: 5rem;
   gap: 3rem;
 }
 .skills__container {
   height: auto;
-  /* background: linear-gradient(45deg, #00000057, transparent); */
   box-shadow: 0 10px 10px rgb(126 15 255 / 20%), 0 0 22px rgb(149 0 243);
   background: var(--background-color);
-  /* background: linear-gradient(
-    to right,
-    var(--background-color),
-    var(--primary-color)
-  ); */
+  padding-bottom: 2rem;
 }
 .skills__categories {
   display: flex;
