--- a/src/containers/Projects/index.css
+++ b/src/containers/Projects/index.css
@@ -8,3 +8,66 @@
 .skill__icons-color {
   fill: var(--secondary-color);
 }
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+@media (min-width: 768px) {
+  .projects-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .projects-container {
+    grid-template-columns: 1fr;
+  }
+}
+.project-item {
+  max-width: 40rem;
+  position: relative;
+  border: solid 2px var(--primary-color);
+  height: auto;
+  border-radius: 1.5rem;
+  overflow: hidden;
+  box-shadow: 0px 0px 15px var(--primary-color);
+}
+.project-image {
+  width: 100%;
+}
+.project-description {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2rem;
+}
+.project-description__title {
+  font-size: var(--xxl);
+  text-align: center;
+  color: var(--secondary-color);
+}
+.project-description__resume {
+  line-height: 1.2;
+}
+.project-links {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.project-links a {
+  font-size: var(--md);
+  padding: 2rem;
+  border-radius: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 50%;
+  min-width: 4rem;
+  text-align: center;
+}
+.project-links a:nth-child(1) {
+  color: var(--primary-color);
+  border: solid 2px var(--primary-color);
+}
+.project-links a:nth-child(2) {
+  color: var(--soft-purple);
+  border: solid 2px var(--soft-purple);
+}
