--- a/src/containers/Projects/index.css
+++ b/src/containers/Projects/index.css
@@ -32,6 +32,7 @@
   gap: 2rem;
   place-items: center;
   align-items: baseline;
+  overflow: hidden;
 }
 @media (min-width: 768px) {
   .projects-container {
@@ -46,5 +47,12 @@
 @media (max-width: 768px) {
   .projects-container {
     grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 425px) {
+  .projects-container {
+    display: flex;
+    justify-content: space-between;
+    overflow: scroll;
   }
 }
