--- a/src/containers/Contact/index.css
+++ b/src/containers/Contact/index.css
@@ -21,6 +21,7 @@
 @media (max-width: 768px) {
   .contact-container {
     grid-template-columns: 1fr;
+    gap: 2rem;
   }
 }
 /* @media (max-width: 425px) {
@@ -31,13 +32,68 @@
 .contact-container__img {
   width: 100%;
   max-width: 60rem;
+  border-radius: 2rem;
+}
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
 }
 .contact-form h3 {
-  font-size: 3.3rem;
+  font-size: 2.5rem;
   text-transform: uppercase;
   color: var(--secondary-color);
   text-align: center;
 }
 .contact-form span {
   color: var(--primary-color);
+  font-size: var(--lg);
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.contact-form form input,
+.contact-form form textarea {
+  background-color: var(--background-color);
+  color: var(--soft-purple);
+  border: none;
+  padding: 1.4rem;
+  font-size: var(--md);
+  border-radius: 1rem;
+  outline: none;
+}
+/* .contact-form form input,
+.contact-form form textarea:-internal-autofill-selected {
+  background-color: var(--background-color) !important;
+  background-image: none !important;
+  color: var(--soft-purple) !important;
+} */
+.contact-form form button {
+  max-width: 20rem;
+  padding: 1.4rem;
+  border-radius: 1rem;
+  background-color: var(--primary-color);
+  border: none;
+  color: var(--secondary-color);
+  text-transform: uppercase;
+  font-weight: bold;
+  cursor: pointer;
+}
+.contact-form form input:hover {
+  transition-property: outline, box-shadow;
+  transition-duration: 0.5s;
+  outline: solid 1px var(--primary-color);
+  box-shadow: 0px 1px 8px var(--primary-color);
+}
+.contact-form form textarea:hover {
+  transition-property: outline;
+  transition-duration: 0.5s;
+  outline: solid 1px var(--primary-color);
+}
+.contact-form form button:hover {
+  box-shadow: 0px 1px 8px var(--primary-color);
 }
