--- a/src/containers/Contact/index.css
+++ b/src/containers/Contact/index.css
@@ -84,13 +84,14 @@
   cursor: pointer;
 }
 .contact-form form input:hover {
-  transition-property: outline, box-shadow;
-  transition-duration: 0.5s;
-  outline: solid 1px var(--primary-color);
   box-shadow: 0px 1px 8px var(--primary-color);
+  outline: solid 1px var(--primary-color);
+  transition-property: box-shadow;
+  transition-duration: 0.5s;
 }
 .contact-form form textarea:hover {
-  transition-property: outline;
+  box-shadow: 0px 1px 8px var(--primary-color);
+  transition-property: box-shadow;
   transition-duration: 0.5s;
   outline: solid 1px var(--primary-color);
 }
