--- a/src/containers/Footer/index.css
+++ b/src/containers/Footer/index.css
@@ -1,5 +1,5 @@
 #footer {
-  padding: 4rem 0;
+  padding: 4rem 0 0;
 }
 .contact-info {
   display: flex;
@@ -31,7 +31,7 @@
 .about-me {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
   color: var(--secondary-color);
 }
 .about-me h6,
@@ -77,4 +77,17 @@
   width: 3rem;
   fill: var(--soft-purple);
   cursor: pointer;
+}
+
+.copyright {
+  padding: 4rem 0;
+  background-color: #1b0122;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.copyright span {
+  font-size: var(--sm);
+  color: var(--soft-purple);
 }
