--- a/src/containers/Footer/index.css
+++ b/src/containers/Footer/index.css
@@ -22,17 +22,27 @@
 .resume-info {
   gap: 2rem;
   margin-top: 2rem;
-  padding: 2rem;
+  padding: 4rem 2rem;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(3, 1fr);
   align-items: baseline;
+  border-bottom: solid 2px var(--primary-color);
 }
 .about-me {
   display: flex;
   flex-direction: column;
   gap: 2rem;
   color: var(--secondary-color);
+}
+@media (max-width: 425px) {
+  .resume-info {
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 3rem;
+  }
+  .about-me {
+    grid-column: 1/3;
+  }
 }
 .about-me h6,
 .portfolio h6,
@@ -65,8 +75,13 @@
 .social-media {
   display: flex;
   justify-content: space-between;
-  padding: 2rem;
+  padding: 4rem 2rem;
   align-items: center;
+}
+@media (max-width: 768px) {
+  .social-media {
+    justify-content: center;
+  }
 }
 .social-media__container {
   display: flex;
