--- a/src/components/NavPage/index.css
+++ b/src/components/NavPage/index.css
@@ -22,3 +22,20 @@
 .nav-page-active {
   display: flex;
 }
+
+@media (max-width: 768px) {
+  .nav-page-active {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    flex-direction: column;
+    align-items: center;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+}
