--- a/src/components/socialMediaLinks/index.css
+++ b/src/components/socialMediaLinks/index.css
@@ -1,7 +1,8 @@
 .social-media__container {
   display: flex;
   justify-content: space-between;
-  gap: 4rem;
+  gap: 2rem;
+  max-width: 23rem;
 }
 .social-icon {
   width: 3rem;
