--- a/src/containers/About/index.css
+++ b/src/containers/About/index.css
@@ -7,12 +7,22 @@
   flex-direction: column;
   gap: 5rem;
 }
-
+.about_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about__photo-container {
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .about__photo {
   border-radius: 2rem;
-  width: 30rem;
-  /* border: 5px solid var(--primary-color); */
-  margin-bottom: 5rem;
+  max-width: 30rem;
+  margin-bottom: 2rem;
+  width: 95%;
 }
 .description-container {
   display: flex;
