--- a/src/containers/About/index.css
+++ b/src/containers/About/index.css
@@ -5,12 +5,13 @@
   background: linear-gradient(to right, rgb(16, 13, 63), rgb(28, 6, 35));
   display: flex;
   flex-direction: column;
-  gap: 5rem;
+  gap: 3rem;
 }
-.about_container {
+.about__container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 2rem;
 }
 .about__photo-container {
   padding: 0 2rem;
@@ -49,6 +50,32 @@
 .description__description {
   display: inline;
   margin-bottom: 5rem;
+}
+.about-cv-link {
+  margin-top: 2rem;
+}
+.about-cv-link a {
+  padding: 2rem;
+  border-radius: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 50%;
+  min-width: 4rem;
+  text-align: center;
+  color: var(--primary-color);
+  border: solid 2px var(--primary-color);
+}
+.about-cv-link a:hover {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  box-shadow: 0px 1px 8px var(--primary-color);
+  transition-property: background-color, box-shadow, color;
+  transition-duration: 0.5s;
+}
+.about-cv-link:active {
+  transform: scale(1.3);
+  transition-property: transform;
+  transition-duration: 0.5s;
 }
 
 @media (max-width: 375px) {
