--- a/src/components/socialMediaLinks/index.css
+++ b/src/components/socialMediaLinks/index.css
@@ -1,11 +1,15 @@
 .social-media__container {
   display: flex;
   justify-content: space-between;
-  gap: 2rem;
+  gap: 3rem;
   max-width: 23rem;
 }
 .social-icon {
   width: 3rem;
   fill: var(--soft-purple);
   cursor: pointer;
+}
+.social-icon:hover {
+  fill: var(--primary-color);
+  filter: drop-shadow(0.35px 3.35px 3px var(--primary-color));
 }
