--- a/src/containers/Skills/index.css
+++ b/src/containers/Skills/index.css
@@ -66,18 +66,19 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  margin-top: 4rem;
+  max-width: 90rem;
+  margin: 4rem auto;
 }
 @media (max-width: 768px) {
   .skills__description-container {
     grid-template-columns: 1fr;
-    gap: 4rem;
+    gap: 2rem;
   }
 }
 .description-left {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   align-items: center;
 }
 .description-left div {
@@ -89,11 +90,11 @@
   width: 13rem;
 }
 .description span {
-  font-size: bold;
+  font-size: var(--lg);
 }
 .description-left p {
   color: var(--secondary-color);
-  font-size: var(--lg);
+  font-size: var(--md);
   line-height: 1.5;
   width: 90%;
   max-width: 30rem;
@@ -118,15 +119,32 @@
 .projects p,
 .experience p {
   color: var(--secondary-color);
-  font-size: var(--lg);
+  font-size: var(--md);
+  font-weight: bold;
 }
 
 .progress-bar {
+  width: 90%;
+  max-width: 35rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .progress-bar {
+    margin-top: 2rem;
+  }
+}
+.progress-bar h4 {
+  color: var(--secondary-color);
+  font-weight: bold;
+  font-size: var(--lg);
+}
+.progress-bar__container {
   display: flex;
   flex-direction: column;
   gap: 4rem;
-  margin-top: 2rem;
-  width: 90%;
   align-items: center;
 }
 .bar {
