--- a/src/containers/Skills/index.css
+++ b/src/containers/Skills/index.css
@@ -163,6 +163,7 @@
   width: 4rem;
   position: absolute;
   top: -12px;
+  z-index: 2;
 }
 .beginner {
   left: 0;
@@ -172,6 +173,25 @@
 }
 .advanced {
   right: 0;
+}
+.bar .level-active {
+  background-color: var(--primary-color);
+  box-shadow: 0 0 1rem var(--primary-color);
+}
+.bar .bar-outline {
+  position: absolute;
+  z-index: 1;
+  left: 1rem;
+  height: 1.5rem;
+  bottom: 0;
+  width: 10rem;
+  top: 0;
+  border-radius: 1.5rem;
+  background: linear-gradient(
+    to right,
+    var(--soft-purple),
+    var(--primary-color)
+  );
 }
 .levels {
   display: flex;
