styling the project card

--- a/src/containers/Projects/index.css
+++ b/src/containers/Projects/index.css
@@ -33,6 +33,7 @@
   place-items: center;
   align-items: baseline;
   overflow: hidden;
+  padding: 1rem;
 }
 @media (min-width: 768px) {
   .projects-container {
