--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -6,7 +6,7 @@
   height: auto;
   border-radius: 1.5rem;
   overflow: hidden;
-  box-shadow: 0px 0px 15px var(--primary-color);
+  box-shadow: 0px 0px 10px var(--primary-color);
 }
 
 .project-image {
@@ -17,22 +17,22 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 2rem;
+  padding: 1rem 2rem;
 }
 
 .project-description__title {
-  font-size: var(--xl);
+  font-size: var(--lg);
   text-align: center;
   color: var(--primary-color);
   margin-bottom: 1rem;
 }
 .project-description__resume {
-  font-size: var(--lg);
+  font-size: var(--md);
   line-height: 1.2;
 }
 .project-links {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 1rem;
 }
 .icon-container {
@@ -40,18 +40,37 @@
   /* display: none; */
 }
 .icon-container svg {
-  width: 4rem;
+  width: 3rem;
   fill: var(--soft-purple);
 }
 .project-links a {
-  font-size: var(--md);
-  padding: 2rem 0;
+  font-size: var(--sm);
+  padding: 1rem;
   border-radius: 1rem;
   font-weight: bold;
   text-transform: uppercase;
   width: 50%;
   min-width: 4rem;
+  max-width: 13rem;
   text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.project-links a:nth-child(1):hover {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  box-shadow: 0px 1px 8px var(--primary-color);
+  transition-property: background-color, box-shadow, color;
+  transition-duration: 0.5s;
+}
+.project-links a:nth-child(2):hover {
+  transform: scale(1.03);
+  transition-property: transform;
+  transition-duration: 0.5s;
+}
+.link-icon {
+  width: 2rem;
 }
 /* .project-item:hover > .project-description .project-links {
   display: flex;
