--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -8,9 +8,18 @@
   overflow: hidden;
   box-shadow: 0px 0px 10px var(--primary-color);
 }
-
+.project-item__image-container {
+  height: 20rem;
+  overflow: hidden;
+}
 .project-image {
   width: 100%;
+  height: auto;
+}
+@media (max-width: 425px) {
+  .project-image {
+    height: 100%;
+  }
 }
 
 .project-description {
