--- a/src/containers/Projects/index.css
+++ b/src/containers/Projects/index.css
@@ -34,6 +34,7 @@
   align-items: baseline;
   overflow: hidden;
   padding: 1rem;
+  place-items: center;
 }
 @media (min-width: 768px) {
   .projects-container {
