--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -33,7 +33,7 @@
   font-size: var(--lg);
   text-align: center;
   color: var(--primary-color);
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 .project-description__resume {
   font-size: var(--md);
