--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -7,6 +7,7 @@
   border-radius: 1.5rem;
   overflow: hidden;
   box-shadow: 0px 0px 10px var(--primary-color);
+  /* height: 100%; */
 }
 .project-item__image-container {
   height: 20rem;
