--- a/src/containers/Projects/index.css
+++ b/src/containers/Projects/index.css
@@ -51,10 +51,10 @@
     grid-template-columns: 1fr;
   }
 }
-@media (max-width: 425px) {
+/* @media (max-width: 425px) {
   .projects-container {
     display: flex;
     justify-content: space-between;
     overflow: scroll;
   }
-}
+} */
