--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -2,13 +2,18 @@
   width: 100%;
   /* min-width: 30rem; */
   position: relative;
-  border: solid 2px var(--primary-color);
+  border: solid 1px var(--primary-color);
   height: auto;
   border-radius: 1.5rem;
   overflow: hidden;
-  box-shadow: 0px 0px 10px var(--primary-color);
   /* height: 100%; */
+  transition: transform 0.3s ease;
 }
+.project-item:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 0px 10px var(--primary-color);
+}
+
 .project-item__image-container {
   height: 20rem;
   overflow: hidden;
