--- a/src/containers/Contact/index.css
+++ b/src/containers/Contact/index.css
@@ -15,8 +15,10 @@
 .contact-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 8rem;
+  gap: 6rem;
   place-items: center;
+  max-width: 85rem;
+  margin: 0 auto;
 }
 @media (max-width: 768px) {
   .contact-container {
@@ -37,17 +39,17 @@
 .contact-form {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 2rem;
 }
 .contact-form h3 {
-  font-size: 2.5rem;
+  font-size: var(--lg);
   text-transform: uppercase;
   color: var(--secondary-color);
-  text-align: center;
+  text-align: left;
 }
 .contact-form span {
   color: var(--primary-color);
-  font-size: var(--lg);
+  font-size: var(--md);
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -65,6 +67,7 @@
   font-size: var(--md);
   border-radius: 1rem;
   outline: none;
+  resize: none;
 }
 /* .contact-form form input,
 .contact-form form textarea:-internal-autofill-selected {
