--- a/src/containers/Contact/index.css
+++ b/src/containers/Contact/index.css
@@ -17,7 +17,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 6rem;
   place-items: center;
-  max-width: 85rem;
+  max-width: 90rem;
   margin: 0 auto;
 }
 @media (max-width: 768px) {
@@ -43,7 +43,7 @@
 }
 .contact-form h3 {
   font-size: var(--lg);
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   color: var(--secondary-color);
   text-align: left;
 }
@@ -51,7 +51,7 @@
   color: var(--primary-color);
   font-size: var(--md);
   font-weight: bold;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 .contact-form form {
   display: flex;
