--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -71,12 +71,15 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  transition-duration: 0.5s ease;
 }
+.project-links a:active {
+  transform: scale(1.2);
+}
+
 .project-links a:nth-child(1):hover {
-  background-color: var(--primary-color);
-  color: var(--secondary-color);
   box-shadow: 0px 1px 8px var(--primary-color);
-  transition-property: background-color, box-shadow, color;
+  transition-property: background-color, box-shadow, color, transform;
   transition-duration: 0.5s;
 }
 .project-links a:nth-child(2):hover {
@@ -99,8 +102,9 @@
   }
 }
 .project-links a:nth-child(1) {
-  color: var(--primary-color);
   border: solid 2px var(--primary-color);
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
 }
 .project-links a:nth-child(2) {
   color: var(--soft-purple);
