--- a/src/containers/About/index.css
+++ b/src/containers/About/index.css
@@ -65,18 +65,16 @@
   text-align: center;
   color: var(--primary-color);
   border: solid 2px var(--primary-color);
-}
-.about-cv-link a:hover {
   background-color: var(--primary-color);
   color: var(--secondary-color);
+}
+.about-cv-link a:hover {
   box-shadow: 0px 1px 8px var(--primary-color);
-  transition-property: background-color, box-shadow, color;
+  transition-property: background-color, box-shadow, color, transform;
   transition-duration: 0.5s;
 }
 .about-cv-link:active {
-  transform: scale(1.3);
-  transition-property: transform;
-  transition-duration: 0.5s;
+  transform: scale(1.2);
 }
 
 @media (max-width: 768px) {
