--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -18,10 +18,27 @@
   height: 20rem;
   overflow: hidden;
 }
+.project-item__image-container div {
+  width: 100%;
+  height: 100%;
+}
 .project-image {
   width: 100%;
   height: auto;
+  /* display: none; */
 }
+.hover-image {
+  width: 100%;
+  height: auto;
+  display: none;
+}
+.project-item:hover > .project-item__image-container div > a > .project-image {
+  display: none;
+}
+.project-item:hover > .project-item__image-container div > a > .hover-image {
+  display: block;
+}
+
 @media (max-width: 425px) {
   .project-image {
     height: 100%;
