--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -6,8 +6,20 @@
   height: auto;
   border-radius: 1.5rem;
   overflow: hidden;
+  min-height: 39rem;
   /* height: 100%; */
   transition: transform 0.3s ease;
+}
+.project-item__container {
+  animation: show 1s ease-in-out;
+}
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 .project-item:hover {
   transform: scale(1.05);
@@ -32,13 +44,12 @@
   height: auto;
   display: none;
 }
-.project-item:hover > .project-item__image-container div > a > .project-image {
+.project-item__image-container div:hover > a > .project-image {
   display: none;
 }
-.project-item:hover > .project-item__image-container div > a > .hover-image {
+.project-item__image-container div:hover > a > .hover-image {
   display: block;
 }
-
 @media (max-width: 425px) {
   .project-image {
     height: 100%;
