hightligting the active section

--- a/src/components/NavPage/index.css
+++ b/src/components/NavPage/index.css
@@ -12,7 +12,7 @@
 .nav-page li a:hover {
   color: var(--primary-color);
 }
-.nav-page li a[aria-current="true"] {
+.nav-page .link-active {
   text-decoration: underline;
 }
 
