--- a/src/components/ProjectCard/index.css
+++ b/src/components/ProjectCard/index.css
@@ -12,13 +12,16 @@
 }
 .project-item__container {
   animation: show 1s ease-in-out;
+  transition-property: transform;
 }
 @keyframes show {
   from {
     opacity: 0;
+    transform: translateY(1rem);
   }
   to {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 .project-item:hover {
