--- a/src/components/NavPage/index.css
+++ b/src/components/NavPage/index.css
@@ -1,12 +1,14 @@
 .nav-page {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 .nav-page li a {
   color: var(--secondary-color);
   font-family: var(--main-font);
-  font-size: var(--lg);
+  font-size: var(--md);
   margin-right: 2rem;
+  font-weight: bold;
 }
 
 .nav-page li a:hover {
@@ -14,6 +16,8 @@
 }
 .nav-page .link-active {
   text-decoration: underline;
+  color: var(--primary-color);
+  transition: 1s ease;
 }
 
 @media (max-width: 768px) {
