--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,14 @@ body {
     display: none;
   }
 }
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--background-color);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 1.5rem;
+}
