--- a/src/containers/Skills/index.css
+++ b/src/containers/Skills/index.css
@@ -85,11 +85,15 @@
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+  animation: opacity 1s ease;
+  animation-fill-mode: forwards;
 }
 .description-left div {
   padding: 2rem;
   background: var(--secondary-color);
   border-radius: 50%;
+  min-height: 17rem;
+  display: flex;
 }
 .description-left svg {
   width: 13rem;
@@ -126,4 +130,18 @@
   color: var(--secondary-color);
   font-size: var(--md);
   font-weight: bold;
+}
+.projects p:last-child,
+.experience p:last-child {
+  animation: opacity 1s ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
