--- a/src/components/NavPage/index.css
+++ b/src/components/NavPage/index.css
@@ -44,5 +44,16 @@
     align-items: center;
     align-items: center;
     justify-content: space-evenly;
+    animation: activeMenu 0.3s ease-in-out;
+    animation-fill-mode: both;
+  }
+}
+
+@keyframes activeMenu {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
