adding roboto font

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   /* Fonts  */
-  --main-font: "Helvetica Neue", Arial, Helvetica;
+  --main-font: "Roboto", Arial, Helvetica;
   --secondary-font: "Roboto";
   /* Colors */
   --primary-color: #9500ff;
