--- a/src/components/Title/index.css
+++ b/src/components/Title/index.css
@@ -1,5 +1,5 @@
 .section__title {
-  color: var(--primary-color);
+  color: var(--secondary-color);
   font-size: var(--xxl);
   text-transform: uppercase;
   align-items: center;
