--- a/src/containers/About/index.css
+++ b/src/containers/About/index.css
@@ -1,7 +1,7 @@
 .about {
   height: auto;
   text-align: center;
-  padding: 5rem 0 5rem 0;
+  padding: 5rem 0 8rem 0;
   background: linear-gradient(to right, rgb(16, 13, 63), rgb(28, 6, 35));
   display: flex;
   flex-direction: column;
@@ -40,7 +40,7 @@
 }
 .about__description strong {
   color: var(--primary-color);
-  background-color: var(--secondary-color);
+  font-weight: bolder;
 }
 .about__description a {
   color: var(--primary-color);
