--- a/src/containers/Hero/index.css
+++ b/src/containers/Hero/index.css
@@ -26,15 +26,48 @@
   font-size: 6rem;
   text-transform: uppercase;
   font-weight: bold;
+  animation: globe 1s forwards ease;
+}
+
+@keyframes globe {
+  from {
+    transform: scale(0.5);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 .hero__container-subtitle {
   font-size: var(--xxl);
   color: var(--primary-color);
+  animation-name: appear;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+}
+@keyframes appear {
+  from {
+    display: none;
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    display: block;
+  }
 }
 .hero__container p {
   font-size: var(--lg);
+  animation-name: appear;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
 }
-
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 @media (max-width: 768px) {
   .hero__container {
     width: 100%;
